Fixed navbar hider, added a background animation to the navbar shower.  Fixed some spacing and layout issues.  Removed 50% of code from Nav Menu

--- a/KudosWiki/Pages/MainContent.razor.css
+++ b/KudosWiki/Pages/MainContent.razor.css
@@ -4,20 +4,49 @@
 .kudosText {
     /*color: black;*/
     color: #1c5380;
-    padding-top: 50px;
 }
 
     .kudosText .text-muted {
         color: #0d385b !important;
     }
 
+.kudosTextInline {
+    /*color: black;*/
+    color: #1c5380;
+    padding-top: 40px;
+}
+
+    .kudosTextInline .text-muted {
+        color: #0d385b !important;
+    }
+
 .kudosTextTop {
     /*color: black;*/
     color: #1c5380;
+    margin-top: -10px;
+    margin-bottom: 15px;
 }
 
     .kudosTextTop .text-muted {
         color: #0d385b !important;
+    }
+
+.kudosTextToggle {
+    display: flex;
+    margin-top: 5px;
+    align-items: center;
+    justify-content: flex-end;
+    color: #0d385b !important;
+}
+
+    .kudosTextToggle label {
+        margin-right: 50px;
+        padding-top: 0px;
+    }
+
+    .kudosTextToggle .inputCheck {
+        margin-right: 0px;
+        padding-top: 0px;
     }
 
 #searchBar {
